--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Personal Portofolio</title>
   </head>
   <body>
-    <h1>My Portofolio</h1>
+    <h1>Registration Form</h1>
+    <p>Please fill out all of the table</p>
+    <fieldset>
+      <label><input type="text" />Your ID</label>
+      <label><input type="password" />Password</label>
+    </fieldset>
   </body>
 </html>
