--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <fieldset>
       <label><input type="text" />Your ID</label>
       <label><input type="password" />Password</label>
+      <p class="forgot"></p>
+      <label><input type="submit" />Log In</label>
     </fieldset>
   </body>
 </html>
