--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <fieldset>
       <label><input type="text" />Your ID</label>
       <label><input type="password" />Password</label>
-      <p class="forgot"></p>
-      <label><input type="submit" />Log In</label>
+      <p class="forgot">Forgot your password?</p>
+      <label><input type="submit" placeholder="Log In" /></label>
     </fieldset>
   </body>
 </html>
