--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta charset="UTF-8" />
-    <title>Personal Portofolio</title>
+    <title>Login Form</title>
   </head>
   <body>
-    <h1>Registration Form</h1>
-    <p>Please fill out all of the table</p>
+    <h1>Log In Now</h1>
     <fieldset>
       <label><input type="text" />Your ID</label>
       <label><input type="password" />Password</label>
