--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <h1>Log In Now</h1>
     <fieldset>
-      <label><input type="text" />Your ID</label>
-      <label><input type="password" />Password</label>
+      <label><input type="text" placeholder="Your ID" /></label>
+      <label><input type="password" placeholder="Password" /></label>
       <p class="forgot">Forgot your password?</p>
-      <label><input type="submit" placeholder="Log In" /></label>
+      <label><input type="submit" placeholder="" /></label>
     </fieldset>
   </body>
 </html>
