--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <fieldset>
       <label><input type="text" placeholder="Your ID" /></label>
       <label><input type="password" placeholder="Password" /></label>
-      <p class="forgot">Forgot your password?</p>
+      <label><p class="forgot">Forgot your password?</p></label>
       <label><input type="submit" placeholder="" /></label>
     </fieldset>
   </body>
